add summary section

--- a/eda_dataset.ipynb
+++ b/eda_dataset.ipynb
@@ -9276,6 +9276,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# SUMMARY OF TAKEAWAYS HERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Model check"
    ]
   },
